--- a/InmoovScript/system/languagePack/FR/general.lang
+++ b/InmoovScript/system/languagePack/FR/general.lang
@@ -1,2 +1,6 @@
 # -- coding: utf-8 --
 lang_whatIsThisLanguage="Pack de langue configuré en français"
+lang_MouthSyncronisation="Je syncronise ma bouche automatiquement, en me basant sur le signal audio"
+lang_MouthSyncronisationBad=u"maousse controle désactivé Je n'ai détecté auqun signal audio de qualité sur le port, "
+lang_MouthSyncronisationNotPerfect=u"J'ai détecté un signal audio mais ce n'est pas parfait, problème d'arèfe de  l'arduino"
+lang_MouthSyncronisationOk=u"OK maousse controle activé"
