--- a/InmoovScript/system/languagePack/EN/StartingActions.lang
+++ b/InmoovScript/system/languagePack/EN/StartingActions.lang
@@ -1,7 +1,14 @@
 # -- coding: utf-8 --
 lang_startingEar="Starting ears"
-lang_chatbotActivated="Chatbot activated, ear.addcomands deactivated"
-lang_chatbotDesactivated="Chatbot deactivated, ear.addcomands activated"
+lang_chatbotLoading="I am loading my brain, please wait a little"
+lang_chatbotActivated="Chatbot loaded, I am smart now"
+lang_chatbotDeactivated="Chatbot disabled"
+lang_earaddcomandsActivated="Basic vocal commands activated"
+lang_earaddcomandsDeactivated="Basic vocal commands disabled"
+lang_startingRightOnly="Only Right side of the robot chosen from configuration"
+lang_startingLeftOnly="Only Left side of the robot chosen from configuration"
+lang_startingFull="Full robot arduino chosen from configuration"
+lang_startingNoArduino="Arduino disabled from configuration"
 lang_startingMouth="Starting mouth"
 lang_startingHead="Starting head"
 lang_startingRightArm="Starting right arm"
@@ -13,3 +20,4 @@ lang_startingTorso="Starting Torso"
 lang_startingNervoPower="Starting nervoboard power"
 lang_startingRollNeck="Starting rollneck mod servo"
 lang_ready="Ok, you have my attention"
+lang_startingPir="pir sensor activation"
